# ExperimentsProject

./: CMakeLists.txt  README.md
src/: bruteForceEditDistance.cpp  extractKMERSFromKCFiles.cpp  generateQueryFile.cpp
